--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,3 +18,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/logo.png
+    - assets/images/logo2.png
+    - assets/images/vitor.jpg
+    #   - images/a_dot_ham.jpeg
