--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,11 @@ environment:
 
 dependencies:
   cloud_firestore: ^6.0.3
+  firebase_auth: ^6.1.1
+  firebase_core: ^4.2.0
   flutter:
     sdk: flutter
+  provider: ^6.1.5+1
   shadcn_flutter: ^0.0.44
 
 dev_dependencies:
