--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   provider: ^6.1.5+1
   shadcn_flutter: ^0.0.44
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
