feat: QRcode de descarte

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^2.5.3
   floating_navbar: ^3.0.0
   flutter_launcher_icons: ^0.14.4
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
