feat: add QR code scanning and location features for collect points
- Updated AndroidManifest.xml to include permissions for location and camera.
- Enhanced CollectPointModel and DiscartModel to include QR code ID and collect point details.
- Implemented QR code scanning functionality in QrCodeScannerPage with proximity validation.
- Added PointQrCodePage to display QR code and collect point information.
- Modified DiscartViewmodel to handle scanned collect point data.
- Updated UI in AddDiscartFormPage to show scanned point information and allow rescanning.
- Introduced new dependencies: geolocator and mobile_scanner for location and QR code scanning capabilities.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   floating_navbar: ^3.0.0
   flutter_launcher_icons: ^0.14.4
   qr_flutter: ^4.1.0
+  mobile_scanner: ^5.2.3
+  geolocator: ^13.0.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
