--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: g1_g2
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -15,6 +15,8 @@ dependencies:
   google_maps_flutter: ^2.5.0
   flutter_polyline_points: ^3.1.0
   location: ^8.0.1
+  permission_handler: ^12.0.1
+  speech_to_text: ^7.3.0
   provider: ^6.1.5+1
   shadcn_flutter: ^0.0.44
   shared_preferences: ^2.5.3
@@ -24,6 +26,8 @@ dependencies:
   mobile_scanner: ^5.2.3
   geolocator: ^13.0.2
   uuid: ^4.5.1
+  image_picker: ^1.1.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -43,4 +47,3 @@ flutter:
     - assets/images/logo2.png
     - assets/images/vitor.jpg
     #   - images/a_dot_ham.jpeg
-  
