--- a/android/app/src/profile/AndroidManifest.xml
+++ b/android/app/src/profile/AndroidManifest.xml
@@ -12,6 +12,6 @@
     <application>
         <!-- Chave da API do Google Maps -->
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="SUA_API_KEY_AQUI"/>
+            android:value="AIzaSyAX5Jx0n0fQlvttxv3ZHMUEBE9BgyAM4-c"/>
     </application>
 </manifest>
