--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^4.2.0
   flutter:
     sdk: flutter
+  http: ^1.2.0
   google_maps_flutter: ^2.5.0
   flutter_polyline_points: ^3.1.0
   location: ^8.0.1
@@ -29,6 +30,7 @@ dependencies:
   image_picker: ^1.2.1
   mobile_scanner: ^7.1.3
   firebase_storage: ^13.0.4
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
